# ms-graph-tool-llm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  1_graph_api_harvester.py  2_train_graph_agent_model.py  3_evaluate_model.py  4_interactive_graph.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DATASET_CARD.md  FAQ.md  MODEL_CARD.md  PULL_REQUEST.md  README.md  SECURITY.md  demo.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/defender_api_tool/: __init__.py  hub.py
src/defender_api_tool/data/: __init__.py  harvester.py
src/defender_api_tool/evaluation/: __init__.py  evaluator.py
src/defender_api_tool/inference/: __init__.py  agent.py
src/defender_api_tool/training/: __init__.py  trainer.py
src/defender_api_tool/utils/: __init__.py  config.py  logging.py
src/msgraph_tool_agent_8b/: __init__.py  hub.py
src/msgraph_tool_agent_8b/data/: __init__.py  harvester.py
src/msgraph_tool_agent_8b/evaluation/: __init__.py  evaluator.py
src/msgraph_tool_agent_8b/inference/: __init__.py  agent.py
src/msgraph_tool_agent_8b/training/: __init__.py  trainer.py
src/msgraph_tool_agent_8b/utils/: __init__.py  config.py  logging.py
src/msgraph_tool_llm/: __init__.py  hub.py
src/msgraph_tool_llm/data/: __init__.py
src/msgraph_tool_llm/evaluation/: __init__.py  evaluator.py
src/msgraph_tool_llm/inference/: __init__.py  agent.py
src/msgraph_tool_llm/training/: __init__.py  trainer.py
src/msgraph_tool_llm/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  test_config.py  test_evaluator.py  test_harvester.py
