[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msgraph-tool-agent-8b"
version = "1.0.0"
description = "Enterprise-grade tool-calling LLM for Microsoft Graph API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ftrout", email = "ftrout@users.noreply.github.com"}
]
maintainers = [
    {name = "ftrout", email = "ftrout@users.noreply.github.com"}
]
keywords = [
    "llm",
    "microsoft-graph",
    "tool-calling",
    "fine-tuning",
    "qlora",
    "transformers",
    "peft",
    "huggingface"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
all = [
    "msgraph-tool-agent-8b[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ftrout/msgraph-tool-agent-8b"
Documentation = "https://github.com/ftrout/msgraph-tool-agent-8b#readme"
Repository = "https://github.com/ftrout/msgraph-tool-agent-8b.git"
Issues = "https://github.com/ftrout/msgraph-tool-agent-8b/issues"
Changelog = "https://github.com/ftrout/msgraph-tool-agent-8b/releases"

[project.scripts]
msgraph-harvest = "msgraph_tool_llm.data.harvester:main"
msgraph-train = "msgraph_tool_llm.training.trainer:main"
msgraph-evaluate = "msgraph_tool_llm.evaluation.evaluator:main"
msgraph-agent = "msgraph_tool_llm.inference.agent:main"
msgraph-upload = "msgraph_tool_llm.hub:main"

[tool.hatch.build.targets.wheel]
packages = ["src/msgraph_tool_llm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["msgraph_tool_llm"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/msgraph_tool_llm"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
