[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "securitygraph-agent"
version = "1.0.0"
description = "Enterprise-grade security tool-calling LLM for Microsoft Security Graph API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ftrout", email = "ftrout@users.noreply.github.com"}
]
maintainers = [
    {name = "ftrout", email = "ftrout@users.noreply.github.com"}
]
keywords = [
    "llm",
    "microsoft-defender",
    "defender-xdr",
    "security-graph",
    "security",
    "soc",
    "tool-calling",
    "fine-tuning",
    "qlora",
    "transformers",
    "peft",
    "huggingface",
    "cybersecurity",
    "threat-detection",
    "incident-response"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    # torch is provided by the NVIDIA container - do not include here
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
demo = [
    "gradio>=4.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
all = [
    "securitygraph-agent[dev,docs,demo]",
]

[project.urls]
Homepage = "https://github.com/ftrout/SecurityGraph-Agent"
Documentation = "https://github.com/ftrout/SecurityGraph-Agent#readme"
Repository = "https://github.com/ftrout/SecurityGraph-Agent.git"
Issues = "https://github.com/ftrout/SecurityGraph-Agent/issues"
Changelog = "https://github.com/ftrout/SecurityGraph-Agent/blob/main/CHANGELOG.md"

[project.scripts]
secgraph-harvest = "defender_api_tool.data.harvester:main"
secgraph-train = "defender_api_tool.training.trainer:main"
secgraph-evaluate = "defender_api_tool.evaluation.evaluator:main"
secgraph-agent = "defender_api_tool.inference.agent:main"
secgraph-upload = "defender_api_tool.hub:main"
secgraph-upload-dataset = "defender_api_tool.hub:dataset_main"

[tool.hatch.build.targets.wheel]
packages = ["src/defender_api_tool"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/MODEL_CARD.md",
    "/DATASET_CARD.md",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["defender_api_tool"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/defender_api_tool"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
